<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.main.SupplierFragment">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/supplierBtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/suppliers"/>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/supplierSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:iconifiedByDefault="false"
            app:queryHint="Search..." />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:stretchColumns="1,2,3,4">
            <TableRow tools:ignore="UselessParent">
                <TextView
                    android:text="@string/id"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_column="1"/>
                <TextView
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_column="2"/>
                <TextView
                    android:text="@string/ruc"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_column="3"/>
                <TextView
                    android:text="@string/state"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_column="4"/>
            </TableRow>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suppliersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>