<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.view.auth.LoginFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/welcome_back" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/login"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/blue"
                android:hint="@string/username"
                android:inputType="text"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/blue"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login"
            tools:ignore="VisualLintButtonSize" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/sign_caption"/>
            <TextView
                android:id="@+id/loginTvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="6dp"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>