<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp" >
    <TextView
        android:id="@+id/tvCreateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_supplier"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/createSupplierForm"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateHeader">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createSupplierNameHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createSupplierName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createSupplierRucHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createSupplierRuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_ruc"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropCategoriesHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/dropCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/supplier_category"
                android:popupBackground="@android:color/white"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropCountriesHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/dropCountries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_country"
                android:popupBackground="@android:color/white"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/createSupplierForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/createSupplierForm"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/createSupplierForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/createSupplierForm"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>